# haihsjaua

./: .gitignore  GEMINI.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: api.rs  main.rs  session.rs
apps/server/: package.json
apps/server/src/: buildApp.ts  mailer.ts  server.ts
apps/server/src/routes/: ledger.ts
apps/server/tests/: health.test.ts  ledger.test.ts
apps/web/: tsconfig.tsbuildinfo
apps/web/src/: App.tsx
apps/web/src/pages/: Ledger.tsx
docs/: RUNBOOK.md
docs/superpowers/plans/: 2026-05-07-fly-to-vps-migration.md
ops/: cutover.sh  dns-flip.sh  healthcheck.sh  parallel-miner.sh  parity-check.sql  rpow-status.sh  smoke-test.sh
ops/systemd/: rpow-healthcheck.service  rpow-healthcheck.timer  rpow-server.service
