[package]
name = "rpow-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpow"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3"
dirs = "5"
hex = "0.4"
rquest = { version = "5.1", features = ["json"] }
rquest-util = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
